add Team page prototype

--- a/team2.html
+++ b/team2.html
@@ -25,7 +25,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-145467622-3');
@@ -86,10 +89,8 @@
             <div class="row justify-content-center teamRow">
                 <div class="col-sm-12 col-md-6 col-lg-4 text-center teamSubtitle">
                     <h4 class="teamText">
-                        Social Media TestDrive was created by a multidisciplinary team of
-                        researchers, designers, and developers at
-                        <a href="http://socialmedialab.cornell.edu/" target="_blank">Cornell's Social Media Lab</a>,
-                        and a collaboration with Common Sense Education.
+                        Social Media TestDrive was created by a multidisciplinary team of researchers, designers,
+                        and developers at <a href="http://socialmedialab.cornell.edu/" target="_blank"> Cornell's Social Media Lab</a>, and a collaboration with Common Sense Education.
                     </h4>
                 </div>
             </div>
@@ -105,32 +106,32 @@
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="./img/people/natalie_bazarova.jpg" class="rounded-circle"
-                            alt="Natalie Bazarova's Photo" width="100%">
+                            alt="Photo of Natalie Bazarova" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Dr. Natalie Bazarova. </span>Dr. Bazarova is the project
-                            co-founder and the
-                            current Project Director. She is an Associate Professor in the
-                            Department of Communication and the Director of the
-                            <a href="http://socialmedialab.cornell.edu/" target="_blank">Social Media Lab</a>
-                            at Cornell University. She can be contacted at nnb8@cornell.edu.
+                            <a href="https://cals.cornell.edu/natalie-bazarova" target="_blank" class="italicText">
+                            Dr. Natalie Bazarova </a> is the project co-founder and the current Project Director.
+                            She is an Associate Professor in the Department of Communication and the Director of the
+                            Social Media Lab at Cornell University. She can be contacted at
+                            <a href="mailto:nnb8@cornell.edu" target="_blank" class="noDecoText">
+                            nnb8@cornell.edu</a>.
                         </p>
                     </div>
                 </div>
                 <!-- Janis Whitlock -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/janis_whitlock.jpg" class="rounded-circle" alt="Janis Whitlock's Photo"
-                            width="100%">
+                        <img src="./img/people/janis_whitlock.jpg" class="rounded-circle" 
+                            alt="Photo of Janis Whitlock" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Dr. Janis Whitlock. </span>Dr. Whitlock is the project co-founder
-                            and
-                            currently contributes to module development and evaluation
-                            oversight. She is an Associate Director and a Research Scientist at
-                            Cornell's Bronfenbrenner Center for Translational Research.
+                            <a href="https://www.human.cornell.edu/people/jlw43" target="_blank" 
+                            class="italicText"> Dr. Janis Whitlock</a> is the project co-founder and currently 
+                            contributes to module development and evaluation oversight. She is an Associate 
+                            Director and a Research Scientist at Cornell's Bronfenbrenner Center for Translational
+                             Research.
                         </p>
                     </div>
                 </div>
@@ -138,29 +139,27 @@
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="./img/people/dominic_difranzo.jpg" class="rounded-circle"
-                            alt="Dominic Difranzo's Photo" width="100%">
+                            alt="Photo of Dominic Difranzo" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Dr. Dominic DiFranzo. </span>Dr. DiFranzo is the developer of the
-                            TestDrive
-                            platform and advises the technical development team. He is an
-                            Assistant Professor in the Department of Computer Science &
-                            Engineering at Lehigh University.
+                            <a href="https://difranzo.com/" target="_blank"> Dr. Dominic DiFranzo</a> is the 
+                            developer of the TestDrive platform and advises the technical development team. He is 
+                            an Assistant Professor in the Department of Computer Science & Engineering at Lehigh
+                            University.
                         </p>
                     </div>
                 </div>
                 <!-- Dan Cosley -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/dan_cosley.jpg" class="rounded-circle" alt="Dan Cosley's Photo"
-                            width="100%">
+                        <img src="./img/people/dan_cosley.jpg" class="rounded-circle" 
+                            alt="Photo of Dan Cosley" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Dr. Dan Cosley. </span> Dr. Cosley provides support for the design
-                            and
-                            content development of the TestDrive project.
+                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a> 
+                            provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
                 </div>
@@ -168,65 +167,61 @@
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="./img/people/amanda_purington.jpg" class="rounded-circle"
-                            alt="Amanda Purington's Photo" width="100%">
+                            alt="Photo of Amanda Purington" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Amanda Purington. </span> Ms. Purington contributes to content
-                            development
-                            and is conducting an outcome evaluation on TestDrive as part of her
-                            doctorate in Communication. She is the Director of Evaluation and
-                            Research at ACT for Youth project in the Bronfenbrenner Center for
-                            Translational Research and a graduate student in the Department of
-                            Communication at Cornell University.
+                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">
+                            Amanda Purington</a> contributes to content development and is conducting an outcome 
+                            evaluation on TestDrive as part of her doctorate in Communication. She is the Director
+                            of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for
+                            Translational Research and a graduate student in the Department of Communication at
+                            Cornell University.
                         </p>
                     </div>
                 </div>
                 <!-- Diana Freed -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/diana_freed.jpg" class="rounded-circle" alt="Diana Freed's Photo"
-                            width="100%">
+                        <img src="./img/people/diana_freed.jpg" class="rounded-circle" 
+                            alt="Photo of Diana Freed" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Diana Freed. </span>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation
-                            ullamco laboris.
+                            <a href="mailto:dlf92@cornell.edu" target="_blank" class="noDecorationText">
+                            Diana Freed</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris.
                         </p>
                     </div>
                 </div>
                 <!-- Ellen Zou -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/ellen_zou.jpeg" class="rounded-circle" alt="Ellen Zou's Photo"
-                            width="100%">
+                        <img src="./img/people/ellen_zou.jpeg" class="rounded-circle" 
+                            alt="Photo of Ellen Zou" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Ellen Zou. </span>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
+                            <a href="mailto:wz434@cornell.edu" target="_blank"> Ellen Zou</a>
+                            is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation
-                            ullamco laboris.
+                            exercitation ullamco laboris.
                         </p>
                     </div>
                 </div>
                 <!-- Pengfei Zhao -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/pengfei_zhao.jpg" class="rounded-circle" alt="Pengfei Zhao's Photo"
-                            width="100%">
+                        <img src="./img/people/pengfei_zhao.jpg" class="rounded-circle" 
+                            alt="Photo of Pengfei Zhao" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <span class="italicText"> Pengfei Zhao. </span>Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation
-                            ullamco laboris.
+                            <a href="mailto:pz259@cornell.edu" target="_blank"> Pengfei Zhao</a> is lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris.
                         </p>
                     </div>
                 </div>
@@ -245,16 +240,43 @@
                     Content Advisors
                 </h3>
                 <p class="teamText">
-                    TestDrive was developed in collaboration with the Digital
-                    Citizenship and Education Programs at Common Sense Education,
-                    including:
+                    TestDrive was developed in collaboration with the Digital Citizenship and Education Programs at
+                    Common Sense Education, including:
                 </p>
                 <p class="teamText">
                     Eisha Buch, Director of Education Development & Programs
-                    <br><br>
-                    Kelly Mendoza, Sr. Director, Education Programs
-                    <br><br>
-                    Daniel Vargas Campos, Education Content Specialist
+                    <br><br> Kelly Mendoza, Sr. Director, Education Programs
+                    <br><br> Daniel Vargas Campos, Education Content Specialist
+                </p>
+            </div>
+
+            <div class="col-lg-6 addColumnPadding">
+                <h3 class="teamSubheader">
+                    Past Core Team Members
+                </h3>
+                <p class="teamText">
+                    <span class="hyperlinkBlue">Dr. Yoon Hyung Choi</span> was the on-site manager for all program
+                    activities and leads coordination of content development. She was a Postdoctoral Associate in
+                    the Department of Communication at Cornell University.
+                </p>
+                <p class="teamText">
+                    <span class="hyperlinkBlue">Anna Spring</span> was the TestDrive application developer. 
+                    She was an Applications Programmer in the Department of Communication at Cornell University.
+                </p>
+            </div>
+
+
+        </div>
+
+        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+            <div class="col-lg-6 addColumnPadding">
+                <h3 class="teamSubheader">
+                    Development and Testing of Social Media TestDrive Prototype
+                </h3>
+                <p class="teamText">
+                    Natalie Bazarova, Jessie Taft, Dominic DiFranzo, Rhoda Meador, Program for Research on Youth
+                    Development and Engagement (PRYDE), Bronfenbrenner Center for Translational Research, and NYS 4-H
+                    educators.
                 </p>
             </div>
 
@@ -263,16 +285,13 @@
                     Other Contributors
                 </h3>
                 <p class="teamText">
-                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande,
-                    Danielle Freedman, Brenna Garcia, Michael Huang, Yanni Kaldis,
-                    Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller,
-                    Molly Nagel, Giesha Nunez, Annika Pinch, Alex Rauter, Emily
-                    Schemerhorn, Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy
-                    Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
+                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande, Danielle Freedman, Brenna
+                    Garcia, Michael Huang, Yanni Kaldis, Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller, Molly
+                    Nagel, Giesha Nunez, Annika Pinch, Alex Rauter, Emily Schemerhorn,
+                    Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy Xu, Tianke Zhao, Yutong Zhou, and Colton
+                    Zuvich.
                 </p>
-
             </div>
-
 
         </div>
 
@@ -281,36 +300,18 @@
                 <h3 class="teamSubheader">
                     Website Development
                 </h3>
+
                 <p class="teamText">
                     Michael Huang, Anna Spring
                 </p>
             </div>
-
             <div class="col-lg-6 addColumnPadding">
                 <h3 class="teamSubheader">
                     Sponsors
                 </h3>
                 <p class="teamText">
-                    Social Media TestDrive is supported by the generosity of Becky and
-                    Jim Morgan and National Science Foundation awards #1405634 and
-                    #2006588.
-                </p>
-            </div>
-
-        </div>
-
-        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
-
-
-            <div class="col-lg-6 addColumnPadding">
-                <h3 class="teamSubheader">
-                    Development and Testing of Social Media TestDrive Prototype
-                </h3>
-                <p class="teamText">
-                    Natalie Bazarova, Jessie Taft, Dominic DiFranzo, Rhoda Meador,
-                    Program for Research on Youth Development and Engagement (PRYDE),
-                    Bronfenbrenner Center for Translational Research, and NYS 4-H
-                    educators.
+                    Social Media TestDrive is supported by the generosity of Becky and Jim Morgan and National Science
+                    Foundation awards #1405634 and #2006588.
                 </p>
             </div>
 
