Final update to donate page, changes to team page prototype

--- a/donate.html
+++ b/donate.html
@@ -73,15 +73,12 @@
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
                     <li class="nav-item-test">
-                        <a class="nav-link" href="donate.html">
+                        <a class="nav-link alignItemsCenter" href="donate.html">
                             <!-- Free, open source bootstrap icon: megaphone fill -->
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
                             <!-- Altered the width, height, and fill -->
-                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
-              </svg> -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC"
-                                class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
+                                class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
                                 <path
                                     d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
                             </svg>
@@ -95,8 +92,8 @@
 
     <main>
         <div class="container-fluid">
-            <!-- Top Content Row -->
-            <div class="row donationRow align-items-center">
+            <!-- Cpntent -->
+            <div class="row align-items-center donationRow">
                 <div class="col-md-5">
                     <img id="donate_img" src="img/donate_5.svg" alt="">
                 </div>
@@ -107,24 +104,21 @@
                     </h1>
                     <h4>
                         Social Media TestDrive is created by a multidisciplinary team of researchers, designers, and
-                        developers <span class="avoidWrap"> at
-                        <img src="./img/cornell_logo.svg" height="49px" alt="Cornell University">'s </span>Social Media Lab in
-                        collaboration <span class="avoidWrap"> with <img src="./img/cselogo.png" height="49px" alt="Common Sense Education">
-                        </span>.
-                        <br> But, it is made possible by friends and supporters who believe in our mission to prepare
-                        young people for the online world.
-                        <br>
-                        <br> It is a free resource, so we invite the support of donors to fund the addition of new
-                        features and continual improvements.
-                        <br>
-                        <br>
-                        <b>Join us in supporting this mission! </b> Make a donation below through Cornell University's
-                        secure donation page.
+                        developers at Cornell University's
+                        <a href="https://socialmedialab.cornell.edu/" target="_blank"> Social Media Lab</a>
+                        in collaboration with
+                        <a href="https://www.commonsense.org/education/social-media-test-drive" target="_blank">Common Sense Education</a>.
+                        <br><br> It is a free resource, so we invite your support to fund its continual operation
+                        and addition of new features. 
+                        <br><br> 
+                        <b>Join us in supporting our mission to prepare young people for the online world! </b>
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1'
                         target="_blank">
-                        <button class="nicelyRoundedButton" type="button">
+                        <button class="donationButton" type="button">
                             Make a donation
+                            <br>
+                            <span class="donationButton-text">(via Cornell University)</span>
                         </button>
                     </a>
                 </div>
