--- a/team2.html
+++ b/team2.html
@@ -90,7 +90,8 @@
                 <div class="col-sm-12 col-md-6 col-lg-4 text-center teamSubtitle">
                     <h4 class="teamText">
                         Social Media TestDrive was created by a multidisciplinary team of researchers, designers,
-                        and developers at <a href="http://socialmedialab.cornell.edu/" target="_blank"> Cornell's Social Media Lab</a>, and a collaboration with Common Sense Education.
+                        and developers at <a href="http://socialmedialab.cornell.edu/" target="_blank"> Cornell's Social
+                            Media Lab</a>, and a collaboration with Common Sense Education.
                     </h4>
                 </div>
             </div>
@@ -110,28 +111,28 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://cals.cornell.edu/natalie-bazarova" target="_blank" class="italicText">
-                            Dr. Natalie Bazarova </a> is the project co-founder and the current Project Director.
+                            <a href="https://cals.cornell.edu/natalie-bazarova" target="_blank">
+                                Dr. Natalie Bazarova</a> is the project co-founder and the current Project Director.
                             She is an Associate Professor in the Department of Communication and the Director of the
                             Social Media Lab at Cornell University. She can be contacted at
-                            <a href="mailto:nnb8@cornell.edu" target="_blank" class="noDecoText">
-                            nnb8@cornell.edu</a>.
+                            <a href="mailto:nnb8@cornell.edu" target="_blank" class="noDecorationText">
+                                nnb8@cornell.edu</a>.
                         </p>
                     </div>
                 </div>
                 <!-- Janis Whitlock -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/janis_whitlock.jpg" class="rounded-circle" 
-                            alt="Photo of Janis Whitlock" width="100%">
+                        <img src="./img/people/janis_whitlock.jpg" class="rounded-circle" alt="Photo of Janis Whitlock"
+                            width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://www.human.cornell.edu/people/jlw43" target="_blank" 
-                            class="italicText"> Dr. Janis Whitlock</a> is the project co-founder and currently 
-                            contributes to module development and evaluation oversight. She is an Associate 
+                            <a href="https://www.human.cornell.edu/people/jlw43" target="_blank">
+                                Dr. Janis Whitlock</a> is the project co-founder and currently
+                            contributes to module development and evaluation oversight. She is an Associate
                             Director and a Research Scientist at Cornell's Bronfenbrenner Center for Translational
-                             Research.
+                            Research.
                         </p>
                     </div>
                 </div>
@@ -143,8 +144,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://difranzo.com/" target="_blank"> Dr. Dominic DiFranzo</a> is the 
-                            developer of the TestDrive platform and advises the technical development team. He is 
+                            <a href="https://difranzo.com/" target="_blank"> Dr. Dominic DiFranzo</a> is the
+                            developer of the TestDrive platform and advises the technical development team. He is
                             an Assistant Professor in the Department of Computer Science & Engineering at Lehigh
                             University.
                         </p>
@@ -153,12 +154,12 @@
                 <!-- Dan Cosley -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/dan_cosley.jpg" class="rounded-circle" 
-                            alt="Photo of Dan Cosley" width="100%">
+                        <img src="./img/people/dan_cosley.jpg" class="rounded-circle" alt="Photo of Dan Cosley"
+                            width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a> 
+                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a>
                             provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
@@ -172,7 +173,9 @@
                     <div class="col-sm-8">
                         <p class="teamText">
                             <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">
-                            Amanda Purington</a> contributes to content development and is conducting an outcome 
+                                Amanda Purington</a> contributes to content development and is conducting an outcome
+                            Amanda Purington</a> contributes to content development and is conducting an outcome
+                            Amanda Purington</a> contributes to content development and is conducting an outcome
                             evaluation on TestDrive as part of her doctorate in Communication. She is the Director
                             of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for
                             Translational Research and a graduate student in the Department of Communication at
@@ -183,13 +186,13 @@
                 <!-- Diana Freed -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/diana_freed.jpg" class="rounded-circle" 
-                            alt="Photo of Diana Freed" width="100%">
+                        <img src="./img/people/diana_freed.jpg" class="rounded-circle" alt="Photo of Diana Freed"
+                            width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
                             <a href="mailto:dlf92@cornell.edu" target="_blank" class="noDecorationText">
-                            Diana Freed</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                Diana Freed</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                             quis nostrud exercitation ullamco laboris.
                         </p>
@@ -198,32 +201,48 @@
                 <!-- Ellen Zou -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/ellen_zou.jpeg" class="rounded-circle" 
-                            alt="Photo of Ellen Zou" width="100%">
+                        <img src="./img/people/ellen_zou.jpeg" class="rounded-circle" alt="Photo of Ellen Zou"
+                            width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wz434@cornell.edu" target="_blank"> Ellen Zou</a>
+                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen Zou</a>
                             is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris.
                         </p>
                     </div>
                 </div>
-                <!-- Pengfei Zhao -->
+                <!-- Eunice Han -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/pengfei_zhao.jpg" class="rounded-circle" 
-                            alt="Photo of Pengfei Zhao" width="100%">
+                        <img src="./img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han"
+                            width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:pz259@cornell.edu" target="_blank"> Pengfei Zhao</a> is lorem
+                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> is lorem
                             ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim
                             veniam, quis nostrud exercitation ullamco laboris.
                         </p>
                     </div>
+                </div>
+                <!-- Winice Hui -->
+                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                    <div class="col-sm-4">
+                        <img src="./img/people/winice_hui.jpg" class="rounded-circle" alt="Photo of Winice Hui"
+                            width="100%">
+                    </div>
+                    <div class="col-sm-8">
+                        <p class="teamText">
+                            <a href="mailto:wh394@cornell.edu" target="_blank" class="noDecorationText"> Winice Hui</a> is the TestDrive
+                            application developer. She is currently an Applications Programmer in the Department of
+                            Communication at Cornell University.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-6 addColumnPadding addRowMargin row">
                 </div>
             </div>
         </div>
@@ -252,6 +271,18 @@
 
             <div class="col-lg-6 addColumnPadding">
                 <h3 class="teamSubheader">
+                    Sponsors
+                </h3>
+                <p class="teamText">
+                    Social Media TestDrive is supported by the generosity of Becky and Jim Morgan and National Science
+                    Foundation awards #1405634 and #2006588.
+                </p>
+            </div>
+        </div>
+
+        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+            <div class="col-lg-6 addColumnPadding">
+                <h3 class="teamSubheader">
                     Past Core Team Members
                 </h3>
                 <p class="teamText">
@@ -260,15 +291,16 @@
                     the Department of Communication at Cornell University.
                 </p>
                 <p class="teamText">
-                    <span class="hyperlinkBlue">Anna Spring</span> was the TestDrive application developer. 
+                    <span class="hyperlinkBlue">Anna Spring</span> was the TestDrive application developer.
                     She was an Applications Programmer in the Department of Communication at Cornell University.
+                </p>
+                <p class="teamText">
+                    <span class="hyperlinkBlue">Dr. Natercia Valle</span> is lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim.
                 </p>
             </div>
 
-
-        </div>
-
-        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
             <div class="col-lg-6 addColumnPadding">
                 <h3 class="teamSubheader">
                     Development and Testing of Social Media TestDrive Prototype
@@ -279,7 +311,9 @@
                     educators.
                 </p>
             </div>
+        </div>
 
+        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
             <div class="col-lg-6 addColumnPadding">
                 <h3 class="teamSubheader">
                     Other Contributors
@@ -293,28 +327,14 @@
                 </p>
             </div>
 
-        </div>
-
-        <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
             <div class="col-lg-6 addColumnPadding">
                 <h3 class="teamSubheader">
                     Website Development
                 </h3>
-
                 <p class="teamText">
-                    Michael Huang, Anna Spring
+                    Michael Huang, Winice Hui, and Anna Spring.
                 </p>
             </div>
-            <div class="col-lg-6 addColumnPadding">
-                <h3 class="teamSubheader">
-                    Sponsors
-                </h3>
-                <p class="teamText">
-                    Social Media TestDrive is supported by the generosity of Becky and Jim Morgan and National Science
-                    Foundation awards #1405634 and #2006588.
-                </p>
-            </div>
-
         </div>
 
         </div>
